# dogwood

./: .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  Makefile  README.md  pytest.ini  requirements.txt  setup.cfg
.github/workflows/: cd.yaml  ci.yaml
dogwood/: __init__.py  errors.py  hello.py  model_expansion.py  weight_transfer.py
dogwood/acceleration/: __init__.py  hello_opencl.c
dogwood/experiments/: __init__.py  model_based_transfer.py
dogwood/pretraining/: __init__.py  imagenet_data_processor.py  mini_imagenet_loader.py  pretraining_pool.py
literature/: README.md
notebooks/: README.md
notebooks/exploration/: README.md  knowledge_distillation.ipynb  lottery_ticket_exploration.ipynb  mnist.ipynb  model_based_transfer_experiments.ipynb  pretrained_model_eval.ipynb  weight_transfer_experiments.ipynb
notebooks/reports/: README.md
publications/: README.md
tests/: conftest.py  test_errors.py  test_hello.py  test_model_expansion.py  test_weight_transfer.py
tests/experiments/: __init__.py  test_model_based_transfer.py
tests/pretraining/: __init__.py  test_imagenet_data_processor.py  test_mini_imagenet_loader.py  test_pretraining_pool.py
