[metadata]
name = dogwood
version = attr: dogwood.__version__
author = Leo Kosta
author_email = kostaleonard@gmail.com
description = PhD work.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kostaleonard/dogwood
project_urls =
    Bug Tracker = https://github.com/kostaleonard/dogwood/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =

[options.packages.find]
include = dogwood*